<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0ECF7"
    tools:context=".TimerActivity">

    <!-- EditText for seconds input -->

    <!-- Start Button -->

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_timer_background"
        android:gravity="center"
        android:text="@string/_00_00_00"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/time_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/time_input"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/background_rounded"
        android:hint="@string/seconds"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_text" />

    <!-- Stop Button -->

    <!-- Reset Button -->

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_input" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/stop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_input" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/reset"
        app:layout_constraintStart_toEndOf="@+id/stop_button"
        app:layout_constraintTop_toBottomOf="@+id/time_input" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="263dp"
        android:layout_height="251dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_button"
        app:srcCompat="@drawable/time" />

</androidx.constraintlayout.widget.ConstraintLayout>
