<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context=".MainActivity2">

    <!-- Header section for tasks -->
    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_tasks"
        android:textSize="24sp"
        android:textColor="#333333"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" />

    <!-- RecyclerView to display the task list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/headerText"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#F9F9F9"
        android:padding="8dp" />

    <!-- Add button to add new tasks -->
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/add_task"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/Secondary" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="415dp"
        android:layout_height="720dp"
        android:layout_marginTop="8dp"
        android:alpha="0.2"
        android:contentDescription="@string/decorative_background"
        android:scaleType="centerCrop"
        android:src="@drawable/rectangle_drawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="88dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_add_alarm_24" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="90dp"
        android:layout_height="59dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:srcCompat="@drawable/schedule" />

</androidx.constraintlayout.widget.ConstraintLayout>
